--- a/src/theme/reset.css
+++ b/src/theme/reset.css
@@ -6,6 +6,16 @@
 	box-sizing: border-box;
 	text-decoration: none;
 }
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+a {
+	margin: 0;
+}
 body {
 	font-size: 100%;
 	list-style-type: none;
